# football-game-tracking

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.nvidia.yml  pyproject.toml
.github/workflows/: ci-cd.yaml  continuous-integration.yaml  run-tests.yaml
docker/: Dockerfile
docker/ball_detection/: Dockerfile
docker/full-app/: Dockerfile
docker/ollama/: Dockerfile
docker/pitch_detection/: Dockerfile
docker/player_detection/: Dockerfile
src/app/: api_to_supervision.py  app_image.py  crop_players.py  debug_visualization.py  full-pipeline.py  functions.py  homography.py  image_api.py  pitch_dimensions.py  pitch_radar_visualization.py  player_tracking.py  team_clustering.py  test.py  utils.py  video_to_frames.py
src/commentary_generation/: config.py  events.py  events3.py  main.py  plot.py
src/final_app/: main.py  video_processor.py
src/radar/: homography.py  pitch_dimensions.py  pitch_radar_visualization.py
src/team_clustering/: clustering_model.py  inference.py  utils.py
src/utils/: schemas.py  yolo_training.py
tests/app/: test_api_to_supervision.py  test_app_utils.py  test_crop_players.py  test_functions.py  test_homography.py  test_image_api.py  test_utils.py
tests/final_app/: test_main.py
tests/radar/: test_homography.py
training/: logger.py  yolo_evaluation.py  yolo_training.py
training/ball_detection/: config.py  evaluation.py  train.py
training/pitch_detection/: config.py  evaluation.py  train.py
training/player_detection/: config.py  train.py
(+1606 files in other folders)
